--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,10 +4,20 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Tech Blog</title>
+    <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
     <nav>
-      <h1>placeholder text</h1>
+      <ul>
+        <li><a href='/'>Home</a></li>
+        <li><a href='/dashboard'>Dashboard</a></li>
+        {{#if loggedIn}}
+          <li><a href='/logout'>Logout</a></li>
+        {{else}}
+          <li><a href='/login'>Login</a></li>
+        {{/if}}
+      </ul>
+      <h1>The Tech Blog</h1>
     </nav>
     {{{body}}}
   </body>
