--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
 :root {
-  --var-background-color: rgba(75, 50, 25, 0.5);
-  --var-font-color: rgba(250, 250, 250, 0.9);
-  --var-border-color: ;
-  --var-header-color: rgba(60, 90, 250, 0.9);
+  --var-background-color: rgb(15, 69, 52);
+  --var-font-color: rgb(232, 248, 233);
+  --var-header-color: rgba(102, 109, 152, 0.419);
 }
 
 * {
