dashboard now renders user blogs and links to blogs, added new blog button

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,1 +1,7 @@
+<div class = 'dashboard-head'>
+<h2 id='dashboard-prompt'>Dashboard for {{name}}</h2>
+<div class = 'button-field'>
+<button id= 'new-blog-btn'>+ New Blog +</button>
+</div>
+</div>
 {{> tile}}
