--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
         <li><a href='/'>Home</a></li>
         <li><a href='/dashboard'>Dashboard</a></li>
         {{#if logged_in}}
-          <li><a href='/logout' id='logoutEl'>Logout</a></li>
+          <li><a href='/login' id='logoutEl'>Logout</a></li>
         {{else}}
           <li><a href='/login'>Login</a></li>
         {{/if}}
