--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-decoration: none;
 }
 
 body {
@@ -40,7 +41,6 @@ li {
 
 nav a {
   color: (var(--var-font-color));
-  text-decoration: none;
 }
 
 h1 {
@@ -98,4 +98,33 @@ button {
 button {
   width: fit-content;
   font: bolder;
+}
+
+.button-field {
+  display: flex;
+  justify-content: space-around;
+}
+
+.blog-tile-body {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: var(--var-header-color);
+  margin-top: 15px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: groove 3px;
+  border-radius: 6px;
+}
+
+h3 {
+  color: var(--var-font-color);
+  text-decoration: none;
+}
+
+p {
+  color: var(--var-font-color);
 }
