--- a/views/partials/tile.handlebars
+++ b/views/partials/tile.handlebars
@@ -1,10 +1,10 @@
-{{#each users as |user|}}
-  <a href='/blog/{{user.blog.id}}' class='blog-tile'>
+{{#each blogs as |blog|}}
+  <a href='/blog/{{blog.Id}}' class='blog-tile'>
     <main class='blog-tile-body'>
       <h3>
-        {{user.blog.title}}
+        {{blog.title}}
       </h3>
-      <p>Posted: {{format_date user.blog.createdAt}}</p>
+      <p>Posted: {{format_date blog.createdAt}}</p>
     </main>
   </a>
 {{/each}}
