styled blog page

--- a/views/partials/tile.handlebars
+++ b/views/partials/tile.handlebars
@@ -1,5 +1,5 @@
 {{#each blogs as |blog|}}
-  <a href='/blog/{{blog.Id}}' class='blog-tile'>
+  <a href='/api/blog/{{blog.Id}}' class='blog-tile'>
     <main class='blog-tile-body'>
       <h3>
         {{blog.title}}
