created update route for blog

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,5 +1,7 @@
 <section class='blog-head'>
-  <h2 id='blog-head-prompt'>{{blog.title}} by {{blog.user.name}}</h2>
+  <h2 id='blog-head-prompt' data-id='{{blog.Id}}'>{{blog.title}}
+    by
+    {{blog.user.name}}</h2>
 
   <div class='blog-body'>
     <h3>{{blog.contents}}</h3>
