--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -14,15 +14,17 @@
     <p id='blog-update-date'>Updated: {{format_date blog.updatedAt}}</p>
   </footer>
 </section>
-<section class='comments-section'>
-  {{#each blog.comments as |comment|}}
-    <h4 id='comment-body'>{{comment.contents}}</h4>
-    <hr />
-    <p id='comment-details'>Posted:
-      {{format_date comment.createdAt}}
-      <i>By: {{comment.user.name}}</i></p>
-  {{/each}}
-</section>
+{{#if blog.comments.length}}
+  <section class='comments-section'>
+    {{#each blog.comments as |comment|}}
+      <h4 id='comment-body'>{{comment.contents}}</h4>
+      <hr />
+      <p id='comment-details'>Posted:
+        {{format_date comment.createdAt}}
+        <i>By: {{comment.user.name}}</i></p>
+    {{/each}}
+  </section>
+{{/if}}
 <div class='update-blog-input'>
   <textarea id='update-blog-text' placeholder='Update Blog Text'></textarea>
   <div class='button-field'>
